--- a/ssh/defaults/main.yaml
+++ b/ssh/defaults/main.yaml
@@ -7,6 +7,18 @@ ssh_authorized_keys:
 # Remove all non-specified SSH public keys.
 ssh_authorized_keys_exclusive: false
 
+# Specifies the host key signature algorithms that the client wants to use in order of preference.
+# Refer to https://man7.org/linux/man-pages/man5/ssh_config.5.html
+ssh_host_key_algorithms: -ecdsa-sha2-nistp256
+
+# Specifies the available KEX (Key Exchange) algorithms.
+# Refer to https://man7.org/linux/man-pages/man5/ssh_config.5.html
+ssh_kex_algorithms: -ecdh-sha2-nistp256,ecdh-sha2-nistp384,ecdh-sha2-nistp521,diffie-hellman-group14-sha256
+
+# Specifies the MAC (message authentication code) algorithms in order of preference.
+# Refer to https://man7.org/linux/man-pages/man5/ssh_config.5.html
+ssh_macs: -hmac-sha1,hmac-sha1-etm@openssh.com,hmac-sha2-256,hmac-sha2-512,umac-128@openssh.com,umac-64-etm@openssh.com,umac-64@openssh.com
+
 # Password authentication is allowed.
 ssh_password_authentication: false
 
