--- a/docker_compose/tasks/main.yaml
+++ b/docker_compose/tasks/main.yaml
@@ -37,8 +37,8 @@
   ansible.builtin.copy:
     src: '{{ item.src }}'
     dest: '{{ docker_compose_path }}/{{ docker_compose_name }}/{{ item.dest }}'
-    owner: '{{ docker_compose_owner }}'
-    group: '{{ docker_compose_group }}'
+    owner: '{{ item.owner | default(docker_compose_owner, true) }}'
+    group: '{{ item.group | default(docker_compose_group, true) }}'
     mode: "{{ item.mode | default('preserve', true) }}"
   when: item.src is defined
   loop: '{{ docker_compose_extras | default([], true) }}'
@@ -51,8 +51,8 @@
   ansible.builtin.copy:
     content: '{{ item.content }}'
     dest: '{{ docker_compose_path }}/{{ docker_compose_name }}/{{ item.dest }}'
-    owner: '{{ docker_compose_owner }}'
-    group: '{{ docker_compose_group }}'
+    owner: '{{ item.owner | default(docker_compose_owner, true) }}'
+    group: '{{ item.group | default(docker_compose_group, true) }}'
     mode: "{{ item.mode | default('preserve', true) }}"
   when: item.content is defined
   loop: '{{ docker_compose_extras | default([], true) }}'
@@ -65,8 +65,8 @@
   ansible.builtin.template:
     src: '{{ item.template }}'
     dest: '{{ docker_compose_path }}/{{ docker_compose_name }}/{{ item.dest }}'
-    owner: '{{ docker_compose_owner }}'
-    group: '{{ docker_compose_group }}'
+    owner: '{{ item.owner | default(docker_compose_owner, true) }}'
+    group: '{{ item.group | default(docker_compose_group, true) }}'
     mode: "{{ item.mode | default('0644', true) }}"
   when: item.template is defined
   loop: '{{ docker_compose_extras | default([], true) }}'
