refactor(docker_compose): change variables and defaults for simplicity

--- a/docker_compose/tasks/main.yaml
+++ b/docker_compose/tasks/main.yaml
@@ -1,21 +1,8 @@
 ---
 
-- name: Fail when docker_compose_name is undefined
-  ansible.builtin.fail:
-    msg: variable docker_compose_name is undefined
-  when: docker_compose_name | default('', true) | length == 0
-  tags: docker_compose
-
-- name: Create docker network
-  community.docker.docker_network:
-    name: '{{ item }}'
-    state: present
-  loop: '{{ docker_compose_networks | default([], true) }}'
-  tags: docker_compose
-
 - name: Create project directory
   ansible.builtin.file:
-    name: '{{ docker_compose_path }}/{{ docker_compose_name }}'
+    name: '{{ docker_compose_path }}'
     state: directory
     owner: '{{ docker_compose_owner }}'
     group: '{{ docker_compose_group }}'
@@ -23,56 +10,63 @@
   notify: docker compose up
   tags: docker_compose
 
-- name: Create docker compose from file
+- name: Create docker compose file
   ansible.builtin.copy:
     src: '{{ docker_compose_file }}'
-    dest: '{{ docker_compose_path }}/{{ docker_compose_name }}/docker-compose.yaml'
+    dest: '{{ docker_compose_path }}/docker-compose.yaml'
     owner: '{{ docker_compose_owner }}'
     group: '{{ docker_compose_group }}'
     mode: 0644
   notify: docker compose up
   tags: docker_compose
 
-- name: Copy additional files and directories
+- name: Copy file or directory
   ansible.builtin.copy:
     src: '{{ item.src }}'
-    dest: '{{ docker_compose_path }}/{{ docker_compose_name }}/{{ item.dest }}'
+    dest: '{{ docker_compose_path }}/{{ item.dest }}'
     owner: '{{ item.owner | default(docker_compose_owner, true) }}'
     group: '{{ item.group | default(docker_compose_group, true) }}'
     mode: "{{ item.mode | default('preserve', true) }}"
   when: item.src is defined
-  loop: '{{ docker_compose_extras | default([], true) }}'
+  loop: '{{ docker_compose_files | default([], true) }}'
   loop_control:
     label: "{{ item | ansible.utils.remove_keys(target=['content']) }}"
   notify: docker compose up
   tags: docker_compose
 
-- name: Create additional files from content
+- name: Create file from content
   ansible.builtin.copy:
     content: '{{ item.content }}'
-    dest: '{{ docker_compose_path }}/{{ docker_compose_name }}/{{ item.dest }}'
+    dest: '{{ docker_compose_path }}/{{ item.dest }}'
     owner: '{{ item.owner | default(docker_compose_owner, true) }}'
     group: '{{ item.group | default(docker_compose_group, true) }}'
-    mode: "{{ item.mode | default('preserve', true) }}"
+    mode: "{{ item.mode | default('0400', true) }}"
   when: item.content is defined
-  loop: '{{ docker_compose_extras | default([], true) }}'
+  loop: '{{ docker_compose_files | default([], true) }}'
   loop_control:
     label: "{{ item | ansible.utils.remove_keys(target=['content']) }}"
   notify: docker compose up
   tags: docker_compose
 
-- name: Create additional files from templates
+- name: Create file from template
   ansible.builtin.template:
     src: '{{ item.template }}'
-    dest: '{{ docker_compose_path }}/{{ docker_compose_name }}/{{ item.dest }}'
+    dest: '{{ docker_compose_path }}/{{ item.dest }}'
     owner: '{{ item.owner | default(docker_compose_owner, true) }}'
     group: '{{ item.group | default(docker_compose_group, true) }}'
-    mode: "{{ item.mode | default('0644', true) }}"
+    mode: "{{ item.mode | default('0400', true) }}"
   when: item.template is defined
-  loop: '{{ docker_compose_extras | default([], true) }}'
+  loop: '{{ docker_compose_files | default([], true) }}'
   loop_control:
     label: "{{ item | ansible.utils.remove_keys(target=['content']) }}"
   notify: docker compose up
+  tags: docker_compose
+
+- name: Create docker network
+  community.docker.docker_network:
+    name: '{{ item }}'
+    state: present
+  loop: '{{ docker_compose_networks | default([], true) }}'
   tags: docker_compose
 
 - name: Trigger `docker compose up --force-recreate`
