--- a/docker_compose/defaults/main.yaml
+++ b/docker_compose/defaults/main.yaml
@@ -3,27 +3,8 @@
 # The docker compose source file.
 docker_compose_file: docker-compose.yaml
 
-# The name of the group to own the project files and directories.
-docker_compose_group: root
-
-# The name of the docker compose project.
-docker_compose_name:
-
-# A list of docker networks to be additionally created.
-docker_compose_networks:
-
-# The name of the user to own the project files and directories.
-docker_compose_owner: root
-
-# The remote absolute path of the parent directory to the project.
-docker_compose_path: /docker
-
-# Pull image(s) before running.
-# Options: 'always', 'missing', 'never', 'policy'
-docker_compose_pull: policy
-
-# A list of files and directories to establish on the remote server.
-docker_compose_extras:
+# A list of additional files and directories to establish on the remote server.
+docker_compose_files:
     # The local path to a file or directory.
 # - src:
 
@@ -44,3 +25,19 @@ docker_compose_extras:
 
     # The permissions of the destination file or directory.
 #   mode: 'preserve'
+
+# The name of the group to own the project files and directories.
+docker_compose_group: '{{ ansible_user }}'
+
+# A list of docker networks to be additionally created.
+docker_compose_networks:
+
+# The name of the user to own the project files and directories.
+docker_compose_owner: '{{ ansible_user }}'
+
+# The remote path of the docker compose project.
+docker_compose_path:
+
+# Pull image(s) before running.
+# Options: 'always', 'missing', 'never', 'policy'
+docker_compose_pull: policy
