--- a/docker_compose/handlers/main.yaml
+++ b/docker_compose/handlers/main.yaml
@@ -2,7 +2,7 @@
 
 - name: docker compose up
   community.docker.docker_compose_v2:
-    project_src: '{{ docker_compose_path }}/{{ docker_compose_name }}'
+    project_src: '{{ docker_compose_path }}'
     state: present
     pull: '{{ docker_compose_pull }}'
     recreate: always
