fix(reboot): flush handlers prior to host reboot

--- a/reboot/tasks/main.yaml
+++ b/reboot/tasks/main.yaml
@@ -9,6 +9,13 @@
     - reboot
     - update
 
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
+  when: reboot_always or reboot_required.stat.exists
+  tags:
+    - reboot
+    - update
+
 - name: Reboot host
   ansible.builtin.reboot:
     msg: Reboot initiated by Ansible
