--- a/pihole/defaults/main.yaml
+++ b/pihole/defaults/main.yaml
@@ -16,12 +16,12 @@ pihole_config:
     # The configuration value (HTTPS).
     value: 443s,[::]:443s
 
+# Define the required firewall rules in iptables.
+pihole_firewall_iptables: true
+
 # The list of errors to ignore during installation.
 pihole_install_ignore_errors:
   - 'Failed to stop pihole-FTL.service: Unit pihole-FTL.service not loaded.'
-
-# Sets the firewall rules in iptables.
-pihole_set_iptable_rules: true
 
 # Skip the OS check during installation.
 pihole_skip_os_check: false
