fix(pihole): suppress logging of sensitive variables

--- a/pihole/tasks/main.yaml
+++ b/pihole/tasks/main.yaml
@@ -42,4 +42,5 @@
 - name: Apply configuration options
   include_tasks: config.yaml
   loop: '{{ pihole_config | default([], true) }}'
+  no_log: true
   tags: pihole
