--- a/pihole/tasks/config.yaml
+++ b/pihole/tasks/config.yaml
@@ -7,18 +7,13 @@
     pcj: "{% if (item.value | type_debug) == 'list' %}{{ item.value | to_json }}{% else %}{{ item.value }}{% endif %}"
   tags: pihole
 
-- name: Target configuration
-  ansible.builtin.debug:
-    msg: '{{ pck }}: {{ pcv }}'
-  tags: pihole
-
-- name: Get configuration
+- name: Get configuration - {{ pck }}
   ansible.builtin.command: pihole-FTL --config {{ pck }}
   register: piholeftl_config
   changed_when: False
   tags: pihole
 
-- name: Set configuration
+- name: Set configuration - {{ pck }}
   ansible.builtin.command: pihole-FTL --config {{ pck }} '{{ pcj }}'
   when: (pcv | string | lower) != (piholeftl_config.stdout | lower)
   notify: restart pihole-FTL.service
