--- a/pihole/defaults/main.yaml
+++ b/pihole/defaults/main.yaml
@@ -2,19 +2,11 @@
 
 # The custom configuration options.
 pihole_config:
-    # The configuration name (Upstream DNS Servers).
-  - key: dns.upstreams
-    # The configuration value (Cloudflare).
-    value:
-      - 1.1.1.1
-      - 1.0.0.1
-      - 2606:4700:4700::1111
-      - 2606:4700:4700::1001
+    # The configuration name
+# - key:
 
-    # The configuration name (Webserver Ports).
-  - key: webserver.port
-    # The configuration value (HTTPS).
-    value: 443s,[::]:443s
+    # The configuration value
+#   value:
 
 # The list of errors to ignore during installation.
 pihole_install_ignore_errors:
