chore(certificate): assert when required variables are not met

--- a/certificate/tasks/main.yaml
+++ b/certificate/tasks/main.yaml
@@ -1,5 +1,11 @@
 ---
 
+- name: Assert required variables
+  ansible.builtin.assert:
+    that: certificate_path
+    fail_msg: "The required variable 'certificate_path' must be defined and non-empty."
+    quiet: true
+
 - name: Create project directory
   ansible.builtin.file:
     name: '{{ certificate_path }}'
